gcc/testsuite/g++.old-deja/g++.ns/using5.C
// { dg-do assemble  }
namespace a {
    class b {
	using std::c;  //{ dg-error "" } namespace using on class level
    };
}
